# procedure_occurrence_api

./: Dockerfile  README.md  config.py  main.py  pyproject.toml
app/: config.py  main.py
app/database/: querries.py
app/models/: models.py
database/: connector.py  querries.py
tests/: test_database.py  test_main.py
utils/: environment.py
