[tool.poetry]
name = "procedure-occurrence-api"
version = "0.1.0"
description = ""
authors = ["Iakubovskii Igor <igor.yakubovsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.6"
google-cloud-bigquery = "3.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
