[tool.poetry]
name = "procedure-occurrence-api"
version = "0.1.0"
description = ""
authors = ["Iakubovskii Igor <igor.yakubovsky@gmail.com>"]
readme = "README.md"

[tool.poetry.group.test.dependencies]
pytest = "8.3.4"
pytest-mock = "3.14.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "0.115.6", extras = ['standard']}
uvicorn = "0.34.0"
google-cloud-bigquery = "3.27.0"
pandas = "2.2.3"
db-dtypes = "1.3.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"